--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -152,6 +152,12 @@ kbd {
 }
 
 
+.section {
+  visibility: hidden;;
+  opacity: 0;
+  margin: 0 0 0 0;
+}
+
 /* Hacks ---------------------------- */
 
 /* Fixes horizontal scrolling in code blocks on OS X El Cap (10.11.3), retina screen
