--- a/src/components/dashboard1/dashboard1.html
+++ b/src/components/dashboard1/dashboard1.html
@@ -1,77 +1,88 @@
-<link rel="stylesheet" href="components/dashboard1/dashboard1.css">
+<section>
+    <!-- <link rel="stylesheet" href="components/dashboard1/dashboard1.css"> -->
 
-<div class="container">
-    <div class="row">
-        <div class="col-6">
-            <h1 class="title-dashboard">iButton Isquare </h1>
-            <h3 class="title-dashboard">Operation Mode: Wi-Fi</h3>
+    <div class="container">
+        <div class="row">
+            <div class="col-6">
+                <h1 class="title-dashboard">iButton Isquare </h1>
+                <h3 class="title-dashboard">Operation Mode: Wi-Fi</h3>
+            </div>
+            <div class="col-6">
+                <img class="image-isquare" src="../assets/img/isquare2.png">
+            </div>
         </div>
-        <div class="col-6">
-            <img class="image-isquare" src="../assets/img/isquare2.png">
-        </div>
-    </div>
-    
-    <div class="row">
+        <form id="form-dashboard1" action="#">
+            <div class="row">
 
-        <div class="col-sm-3">
-            <div class="card">
-                <div class="card-header"><strong>Time Transmition</strong></div>
-                <div class="card-body">
-                    <div class="form-row">
-                        <div class="form-group col-sm-4">
-                            <label for="Horas" class="col-form-label-sm">Horas</label>
-                            <input type="number" class="form-control form-control-sm" id="Horas" min="0" max="23" placeholder="0">
+                <div class="col-sm-3">
+                    <div class="card">
+                        <div class="card-header"><strong>Time Transmition</strong></div>
+                        <div class="card-body">
+                            <div class="form-row">
+                                <div class="form-group col-sm-4">
+                                    <label for="Horas" class="col-form-label-sm">Horas</label>
+                                    <input type="number" class="form-control form-control-sm" id="Horas" min="0"
+                                        max="23" placeholder="0">
+                                </div>
+                                <div class="form-group col-sm-4">
+                                    <label for="Minutos" class="col-form-label-sm">Minutos</label>
+                                    <input type="number" class="form-control form-control-sm" id="Minutos" min="0"
+                                        max="59" placeholder="0">
+                                </div>
+                                <div class="form-group col-sm-4">
+                                    <label for="Segundos" class="col-form-label-sm">Segundos</label>
+                                    <input type="number" class="form-control form-control-sm" id="Segundos" min="0"
+                                        max="59" placeholder="0">
+                                </div>
+                                <div class="form-group col-sm-5">
+                                    <label for="keepAlive" class="col-form-label-sm">keep Alive(n)</label>
+                                    <input type="number" class="form-control form-control-sm" id="keepAlive" min="0"
+                                        max="59" placeholder="0">
+                                </div>
+                                <div class="form-group col-sm-4">
+                                    <label for="TimeKeep" class="col-form-label-sm">Time</label>
+                                    <input type="text" class="form-control form-control-sm" id="TimeKeep"
+                                        placeholder="0" readonly>
+                                </div>
+                            </div>
                         </div>
-                        <div class="form-group col-sm-4">
-                            <label for="Minutos" class="col-form-label-sm">Minutos</label>
-                            <input type="number" class="form-control form-control-sm" id="Minutos" min="0" max="59" placeholder="0">
+                    </div>
+                </div>
+
+                <div class="col-sm-3">
+                    <div class="card">
+                        <div class="card-header">
+                            <div class="form-row">
+                                <div class="col-sm-10"><strong>Analog Input 1</strong></div>
+                                <div class="custom-control custom-switch">
+                                    <input type="checkbox" name="analogInputSwitch" class="custom-control-input" id="customSwitch1">
+                                    <label class="custom-control-label" for="customSwitch1"></label>
+                                </div>
+                            </div>
                         </div>
-                        <div class="form-group col-sm-4">
-                            <label for="Segundos" class="col-form-label-sm">Segundos</label>
-                            <input type="number" class="form-control form-control-sm" id="Segundos" min="0" max="59" placeholder="0">
-                        </div>
-                        <div class="form-group col-sm-5">
-                            <label for="keepAlive" class="col-form-label-sm">keep Alive(n)</label>
-                            <input type="number" class="form-control form-control-sm" id="keepAlive" min="0" max="59" placeholder="0">
-                        </div>
-                        <div class="form-group col-sm-4">
-                            <label for="TimeKeep" class="col-form-label-sm">Time</label>
-                            <input type="text" class="form-control form-control-sm" id="TimeKeep" placeholder="0" readonly>
+                        <div class="card-body">
+                            <div class="form-group">
+                                <div class="form-row">
+                                    <label for="range1" class="col-form-label-sm col-sm-2">Max</label>
+                                    <input type="range" class="form-control-range" id="range1" min="0" max="4096"
+                                        value="2048">
+                                    <span class="badge badge-secondary col-sm-2 offset-sm-1" id="namespan1">2048</span>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="form-row">
+                                    <label for="range2" class="col-form-label-sm col-sm-2">Min</label>
+                                    <input type="range" class="form-control-range" id="range2" min="0" max="4096"
+                                        value="2048">
+                                    <span class="badge badge-secondary col-sm-2 offset-sm-1" id="namespan2">2048</span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-
-        <div class="col-sm-3">
-            <div class="card">
-                <div class="card-header">
-                    <div class="form-row">
-                        <div class="col-sm-10"><strong>Analog Input 1</strong></div>
-                        <div class="custom-control custom-switch">
-                            <input type="checkbox" class="custom-control-input" id="customSwitch1">
-                            <label class="custom-control-label" for="customSwitch1"></label>
-                        </div>
-                   </div>
-                </div>
-                <div class="card-body">
-                    <div class="form-group">
-                        <div class="form-row">
-                            <label for="range1" class="col-form-label-sm col-sm-2">Max</label>
-                            <input type="range" class="form-control-range" id="range1" min="0" max="4096" value="2048">
-                            <span class="badge badge-secondary col-sm-2 offset-sm-1" id="namespan1">2048</span>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="form-row">
-                            <label for="range2" class="col-form-label-sm col-sm-2">Min</label>
-                            <input type="range" class="form-control-range" id="range2" min="0" max="4096" value="2048">
-                            <span class="badge badge-secondary col-sm-2 offset-sm-1" id="namespan2">2048</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+            <input id="dashboard1-submit" type="submit"> </input>
+        </form>
     </div>
 
-</div>
+</section>
