Create Analog Input 2 card and Humidity card, row spacing modification (mb-4)

--- a/src/components/dashboard1/dashboard1.css
+++ b/src/components/dashboard1/dashboard1.css
@@ -25,6 +25,7 @@ h1.title-dashboard {
 
   .form-control-range{
       width: 55%;
+      /* transform: rotate(-90deg); */
   }
 
   .col-form-label-sm {
