--- a/src/components/dashboard1/dashboard1.html
+++ b/src/components/dashboard1/dashboard1.html
@@ -7,37 +7,35 @@
                 <h1 class="title-dashboard">iButton Isquare </h1>
                 <h3 class="title-dashboard">Operation Mode: Wi-Fi</h3>
             </div>
-            <div class="col-6">
+            <div class="col-6 mb-4">
                 <img class="image-isquare" src="../assets/img/isquare2.png">
             </div>
         </div>
+
         <form id="form-dashboard1" action="#">
+            
             <div class="row">
 
                 <div class="col-sm-3">
-                    <div class="card">
+                    <div class="card mb-4">
                         <div class="card-header"><strong>Time Transmition</strong></div>
                         <div class="card-body">
                             <div class="form-row">
                                 <div class="form-group col-sm-4">
                                     <label for="Horas" class="col-form-label-sm">Horas</label>
-                                    <input type="number" class="form-control form-control-sm" id="Horas" min="0"
-                                        max="23" placeholder="0">
+                                    <input type="number" class="form-control form-control-sm" id="Horas" min="0" max="23" placeholder="0">
                                 </div>
                                 <div class="form-group col-sm-4">
                                     <label for="Minutos" class="col-form-label-sm">Minutos</label>
-                                    <input type="number" class="form-control form-control-sm" id="Minutos" min="0"
-                                        max="59" placeholder="0">
+                                    <input type="number" class="form-control form-control-sm" id="Minutos" min="0" max="59" placeholder="0">
                                 </div>
                                 <div class="form-group col-sm-4">
                                     <label for="Segundos" class="col-form-label-sm">Segundos</label>
-                                    <input type="number" class="form-control form-control-sm" id="Segundos" min="0"
-                                        max="59" placeholder="0">
+                                    <input type="number" class="form-control form-control-sm" id="Segundos" min="0" max="59" placeholder="0">
                                 </div>
                                 <div class="form-group col-sm-5">
                                     <label for="keepAlive" class="col-form-label-sm">keep Alive(n)</label>
-                                    <input type="number" class="form-control form-control-sm" id="keepAlive" min="0"
-                                        max="59" placeholder="0">
+                                    <input type="number" class="form-control form-control-sm" id="keepAlive" min="0" max="59" placeholder="0">
                                 </div>
                                 <div class="form-group col-sm-4">
                                     <label for="TimeKeep" class="col-form-label-sm">Time</label>
@@ -49,38 +47,102 @@
                     </div>
                 </div>
 
+                <!-- card with the content of Analog input 1 -->
                 <div class="col-sm-3">
                     <div class="card">
                         <div class="card-header">
                             <div class="form-row">
                                 <div class="col-sm-10"><strong>Analog Input 1</strong></div>
                                 <div class="custom-control custom-switch">
-                                    <input type="checkbox" name="analogInputSwitch" class="custom-control-input" id="customSwitch1">
-                                    <label class="custom-control-label" for="customSwitch1"></label>
+                                    <input type="checkbox" name="analogInputSwitch" class="custom-control-input" id="AnalogSwitch1">
+                                    <label class="custom-control-label" for="AnalogSwitch1"></label>
                                 </div>
                             </div>
                         </div>
                         <div class="card-body">
                             <div class="form-group">
                                 <div class="form-row">
-                                    <label for="range1" class="col-form-label-sm col-sm-2">Max</label>
-                                    <input type="range" class="form-control-range" id="range1" min="0" max="4096"
-                                        value="2048">
-                                    <span class="badge badge-secondary col-sm-2 offset-sm-1" id="namespan1">2048</span>
+                                    <label for="Analog1RangeMax" class="col-form-label-sm col-sm-2">Max</label>
+                                    <input type="range" class="form-control-range" id="Analog1RangeMax" step="1" min="0" max="4096" value="2048" disabled>
+                                    <span class="badge badge-secondary col-sm-2 offset-sm-1" id="Analog1spanMax">2048</span>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="form-row">
-                                    <label for="range2" class="col-form-label-sm col-sm-2">Min</label>
-                                    <input type="range" class="form-control-range" id="range2" min="0" max="4096"
-                                        value="2048">
-                                    <span class="badge badge-secondary col-sm-2 offset-sm-1" id="namespan2">2048</span>
+                                    <label for="Analog1RangeMin" class="col-form-label-sm col-sm-2">Min</label>
+                                    <input type="range" class="form-control-range" id="Analog1RangeMin" step="1" min="0" max="4096" value="2048" disabled>
+                                    <span class="badge badge-secondary col-sm-2 offset-sm-1" id="Analog1spanMin">2048</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- card with the content of Analog input 2 -->
+                <div class="col-sm-3">
+                    <div class="card">
+                        <div class="card-header">
+                            <div class="form-row">
+                                <div class="col-sm-10"><strong>Analog Input 2</strong></div>
+                                <div class="custom-control custom-switch">
+                                    <input type="checkbox" name="analogInputSwitch" class="custom-control-input" id="AnalogSwitch2">
+                                    <label class="custom-control-label" for="AnalogSwitch2"></label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <div class="form-group">
+                                <div class="form-row">
+                                    <label for="Analog2RangeMax" class="col-form-label-sm col-sm-2">Max</label>
+                                    <input type="range" class="form-control-range" id="Analog2RangeMax" step="1" max="4096" value="2048" disabled>
+                                    <span class="badge badge-secondary col-sm-2 offset-sm-1" id="Analog2spanMax">2048</span>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="form-row">
+                                    <label for="Analog2RangeMin" class="col-form-label-sm col-sm-2">Min</label>
+                                    <input type="range" class="form-control-range" id="Analog2RangeMin" step="1" max="4096" value="2048" disabled>
+                                    <span class="badge badge-secondary col-sm-2 offset-sm-1" id="Analog2spanMin">2048</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="row">
+                <div class="col-sm-3">
+                    <div class="card">
+                        <div class="card-header">
+                            <div class="form-row">
+                                <div class="col-sm-10"><strong>Humidity</strong></div>
+                                <div class="custom-control custom-switch">
+                                    <input type="checkbox" name="humidity" class="custom-control-input" id="HumiditySwitch">
+                                    <label class="custom-control-label" for="HumiditySwitch"></label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <div class="form-group">
+                                <div class="form-row">
+                                    <label for="HumidityRangeMax" class="col-form-label-sm col-sm-2">Max</label>
+                                    <input type="range" class="form-control-range" id="HumidityRangeMax" step="1" max="100" value="50" disabled>
+                                    <span class="badge badge-secondary col-sm-2 offset-sm-1" id="HumidityspanMax">50</span>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="form-row">
+                                    <label for="HumidityRangeMin" class="col-form-label-sm col-sm-2">Min</label>
+                                    <input type="range" class="form-control-range" id="HumidityRangeMin" step="1" max="100" value="50" disabled>
+                                    <span class="badge badge-secondary col-sm-2 offset-sm-1" id="HumidityspanMin">50</span>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+
             <input id="dashboard1-submit" type="submit"> </input>
         </form>
     </div>
