--- a/assets/css/section.css
+++ b/assets/css/section.css
@@ -6,8 +6,8 @@
   left: 0;
   right: 0;
   bottom: 0;
-  /* overflow-x: hidden; */
-  /* overflow-y: auto; */
+  overflow-x: hidden;
+  overflow-y: auto;
   color: var(--color-accent);
 
   /* Hide */
